--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -11,6 +11,7 @@
             height: 600px;
             position: relative;
             width: 768px;
+            overflow: auto;
         }
     </style>
 
