General tidyups and tweaks

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -22,8 +22,9 @@
 <body style="font-family:'Segoe UI'">
     <h1>BuddyBot</h1>
     <p>An intelligent personal assistant bot to assist with your everyday needs</p>
-
-    <div id="webchat"></div>
+    
+    <p style="color: red">Due to an Auth issue, the first message will fail. Once you try again Buddy will come to life.</p>
+<div id="webchat"></div>
 
     <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
     <script>
