Move styling to seperate file

--- a/BuddyBot/src/default.htm
+++ b/BuddyBot/src/default.htm
@@ -1,20 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>BuddyBot</title>
+    <title>BuddyBot - An intelligent personal assistant</title>
     <meta charset="utf-8" />
-
+    <link rel="stylesheet" href="./Site.css">
     <style>
-        #webchat {
-            float: left;
-            position: relative;
-            height: 600px;
-            width: 400px;
-            overflow: auto;
-            border-radius: 5px;
-            box-shadow: 1px 5px 8px 1px #cecece;
-        }
-
+        
     </style>
 
 </head>
