Add basic styling

--- a/BuddyBot/src/default.htm
+++ b/BuddyBot/src/default.htm
@@ -13,10 +13,15 @@
 <body>
         <div class="flex-container">
             <div class="about-container">
-                <h1>BuddyBot</h1>
-                <p>An intelligent personal assistant bot to assist with your everyday needs</p>
+                <h1 class="main-title">🤖 BuddyBot</h1>
+                <p class="sub-title">An intelligent personal assistant bot to assist with your everyday needs</p>
+                <div class="error-well">
+                    <p class="error-text">
+                        Due to an internal server issue, the first message will fail. Simply enter your first message twice and
+                        Buddy will spring to life. I'm working to fix this bug ASAP! 🐛
+                    </p>
+                </div>
 
-                <p style="color: red">Due to an Auth issue, the first message will fail. Once you try again Buddy will come to life.</p>
             </div>
             <div class="webchat-container">
                 <div id="webchat"></div>
