Move default.htm back to root

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -3,13 +3,8 @@
 <head>
     <title>BuddyBot - An intelligent personal assistant</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./Site.css">
-    <style>
-        
-    </style>
-
+    <link rel="stylesheet" href="./src/site.css">
 </head>
-
 <body>
         <div class="flex-container">
             <div class="about-container">
@@ -21,7 +16,6 @@
                         Buddy will spring to life. I'm working to fix this bug ASAP! 🐛
                     </p>
                 </div>
-
             </div>
             <div class="webchat-container">
                 <div id="webchat"></div>
