Amend styling so sendBox is positioned at bottom

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -25,7 +25,8 @@
             <script>
                 window.WebChat.renderWebChat({
                     directLine: window.WebChat.createDirectLine({ secret: 'GWLuPsYNedU.cwA.khE.I3LeUlKURhomRrIo2FoLPM7amVzG594CvWOczgxpC30' })
-                }, document.getElementById('webchat'));
+                },
+                    document.getElementById('webchat'));
             </script>
         </div>
 </body>
