Add favicon & styling tweaks

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -3,12 +3,14 @@
 <head>
     <title>BuddyBot - An intelligent personal assistant</title>
     <meta charset="utf-8" />
+    <link rel="icon" href="./src/buddybot_icon.ico">
     <link rel="stylesheet" href="./src/site.css">
 </head>
 <body>
         <div class="flex-container">
             <div class="about-container">
-                <h1 class="main-title">🤖 BuddyBot</h1>
+                <img class="bot-avatar" src="src/images/BuddyBotSlim.svg" />
+                <h1 class="main-title">BuddyBot</h1>
                 <p class="sub-title">An intelligent personal assistant bot to assist with your everyday needs</p>
                 <div class="error-well">
                     <p class="error-text">
