Remove duplictae XD file & update BB logo link

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -9,7 +9,7 @@
 <body>
         <div class="flex-container">
             <div class="about-container">
-                <img class="bot-avatar" src="src/images/BuddyBotSlim.svg" />
+                <img class="bot-avatar" src="src/images/BuddyBotAvatar.svg" />
                 <h1 class="main-title">BuddyBot</h1>
                 <p class="sub-title">An intelligent personal assistant bot to assist with your everyday needs</p>
                 <div class="error-well">
