WIP - Adding sections

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -10,14 +10,19 @@
         <div class="flex-container">
             <div class="about-container">
                 <img class="bot-avatar" src="src/images/BuddyBotAvatar.svg" />
-                <h1 class="main-title">BuddyBot</h1>
-                <p class="sub-title">An intelligent personal assistant bot to assist with your everyday needs</p>
-                <div class="error-well">
-                    <p class="error-text">
-                        Due to an internal server issue, the first message will fail. Simply enter your first message twice and
-                        Buddy will spring to life. I'm working to fix this bug ASAP!
-                    </p>
-                </div>
+                <section class="header-section">
+                    <h1 class="main-title">BuddyBot</h1>
+                    <p class="sub-title">An intelligent personal assistant bot to assist with your everyday needs</p>
+                    <div class="error-well">
+                        <p class="error-text">
+                            Due to an internal server issue, the first message will fail. Simply enter your first message twice and
+                            Buddy will spring to life. I'm working to fix this bug ASAP!
+                        </p>
+                    </div>
+                </section>
+                <section class="article-section">
+                    <h2>About</h2>
+                </section>
             </div>
             <div class="webchat-container">
                 <div class="webchat-wrapper">
