--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -21,7 +21,11 @@
                     </div>
                 </section>
                 <section class="article-section">
-                    <h2>About</h2>
+                    <h2>Meet Buddy</h2>
+                    <p class="article-text">BuddyBot is a chatbot built with the <a href="https://dev.botframework.com/">Microsoft Bot Framework;</a> he's a text-based intelligent personal assistant,
+                    who can understand what you write using a natural language processing service called <a href="https://www.luis.ai/home">LUIS.</a> BuddyBot has many features such as retrieving
+                    weather forecasts, telling jokes, generating random values and is configurable through swappable personalities and a database managed small
+                    talk response service.</p>
                 </section>
             </div>
             <div class="webchat-container">
@@ -32,15 +36,11 @@
 
             <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
             <script>
-
                 window.WebChat.renderWebChat({
                     directLine: window.WebChat.createDirectLine({ secret: 'GWLuPsYNedU.cwA.khE.I3LeUlKURhomRrIo2FoLPM7amVzG594CvWOczgxpC30' })
                 },
                     document.getElementById('webchat'));
-
             </script>
         </div>
 </body>
-
-
 </html>
