--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -23,6 +23,9 @@
                     talk response service.
                 </p>
             </section>
+            <footer>
+                <p class="footer-tagline">Developed by Kirby McKenzie</p>
+            </footer>
         </div>
         <div class="webchat-container">
             <div class="webchat-wrapper">
