add github logo to footer

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -17,14 +17,17 @@
             <section class="article-section">
                 <h2>Meet Buddy</h2>
                 <p class="article-text">
-                    BuddyBot is a chatbot built with the <a href="https://dev.botframework.com/">Microsoft Bot Framework</a>; he's a text-based intelligent personal assistant,
-                    who can understand what you write using a natural language processing service called <a href="https://www.luis.ai/home">LUIS</a>. BuddyBot has many features such as retrieving
+                    BuddyBot is a chatbot built with the <a href="https://dev.botframework.com/" target="_blank">Microsoft Bot Framework</a>; he's a text-based intelligent personal assistant,
+                    who can understand what you write using a natural language processing service called <a href="https://www.luis.ai/home" target="_blank">LUIS</a>. BuddyBot has many features such as retrieving
                     weather forecasts, telling jokes, generating random values and is configurable through swappable personalities and a database managed small
                     talk response service.
                 </p>
             </section>
             <footer>
-                <p class="footer-tagline">Developed by Kirby McKenzie</p>
+                <a class="github-link" href="https://github.com/KirbyMcKenzie/BuddyBot" target="_blank">
+                    <img src="src/images/GitHubLogo.svg">
+                </a>
+                <p class="footer-tagline">Developed by <a class="footer-link" href="https://www.linkedin.com/in/kirbymckenzie/" target="_blank">Kirby McKenzie</a></p>
             </footer>
         </div>
         <div class="webchat-container">
