Fix suggestion box being too wide

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -32,6 +32,7 @@
         </div>
         <div class="webchat-container">
             <div class="webchat-wrapper">
+                <div class="webchat-wrapper">
                 <div id="webchat"></div>
             </div>
         </div>
@@ -40,9 +41,6 @@
         <script>
 
             const styleOptions = {
-
-                // General
-                paddingWide: '2000px',
 
                 // BuddyBot
                 bubbleBackground: '#E3E8F1',
