Add conversation starters

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -14,7 +14,7 @@
                 <h1 class="main-title">BuddyBot</h1>
                 <p class="sub-title">An intelligent personal assistant bot to assist with your everyday needs</p>
             </section>
-            <section class="article-section">
+            <section>
                 <h2>Meet Buddy</h2>
                 <p class="article-text">
                     BuddyBot is a chatbot built with .NET and the <a href="https://dev.botframework.com/" target="_blank">Microsoft Bot Framework</a>; he's a text-based intelligent personal assistant,
@@ -23,6 +23,40 @@
                     talk response service.
                 </p>
             </section>
+            <section>
+                <h2>Conversation Starters </h2>
+                <p class="article-text">Unsure on where to start? Simply greet BuddyBot and he'll run you through a short setup,
+                Then take your pick on any of the following conversation starters. </p>
+                <ul class="conversation-bubbles">
+                    <li class="bubble bubble-blue">Hey Buddy!</li>
+                    <li class="bubble bubble-grey">What can do you?</li>
+                    <li class="bubble bubble-blue">Are you busy?</li>
+                    <li class="bubble bubble-grey">Who created you? </li>
+                    <li class="bubble bubble-blue">😂</li>
+                    <li class="bubble bubble-grey">Whats the weather doing?</li>
+                    <li class="bubble bubble-blue">Do you get hungry?</li>
+                    <li class="bubble bubble-grey">Are you real? </li>
+                    <li class="bubble bubble-blue">Tell me a joke</li>
+                    <li class="bubble bubble-blue">Hey Siri!</li>
+                    <li class="bubble bubble-grey">I love you!</li>
+                    <li class="bubble bubble-blue">How was your day?</li>
+                    <li class="bubble bubble-grey">Are you going to destroy humanity?</li>
+                    <li class="bubble bubble-blue">Pick a number between 1 & 10</li>
+                    <li class="bubble bubble-grey">😡</li>
+                    <li class="bubble bubble-blue">What's the meaning of life?</li>
+                    <li class="bubble bubble-grey">Flip a coin</li>
+                    <li class="bubble bubble-blue">How are you?</li>
+                    <li class="bubble bubble-grey">I'm happy!</li>
+                    <li class="bubble bubble-blue">Do you know Alexa?</li>
+                    <li class="bubble bubble-grey">Where are you?</li>
+                    <li class="bubble bubble-blue">❤</li>
+                    <li class="bubble bubble-grey">Are you spying on me?</li>
+                    <li class="bubble bubble-blue">Pleased to meet you!</li>
+                    <li class="bubble bubble-grey">Are you a robot?</li>
+                    <li class="bubble bubble-blue">Let's be friends</li>
+                </ul>
+            </section>
+            
             <footer>
                 <a class="github-link" href="https://github.com/KirbyMcKenzie/BuddyBot" target="_blank">
                     <img src="src/images/GitHubLogo.svg">
