Small style tweaks to conversation bubbles

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -28,32 +28,32 @@
                 <p class="article-text">Unsure on where to start? Simply greet BuddyBot and he'll run you through a short setup,
                 Then take your pick on any of the following conversation starters. </p>
                 <ul class="conversation-bubbles">
-                    <li class="bubble bubble-blue">Hey Buddy!</li>
-                    <li class="bubble bubble-grey">What can do you?</li>
-                    <li class="bubble bubble-blue">Are you busy?</li>
-                    <li class="bubble bubble-grey">Who created you? </li>
-                    <li class="bubble bubble-blue">😂</li>
-                    <li class="bubble bubble-grey">Whats the weather doing?</li>
-                    <li class="bubble bubble-blue">Do you get hungry?</li>
-                    <li class="bubble bubble-grey">Are you real? </li>
-                    <li class="bubble bubble-blue">Tell me a joke</li>
-                    <li class="bubble bubble-blue">Hey Siri!</li>
-                    <li class="bubble bubble-grey">I love you!</li>
-                    <li class="bubble bubble-blue">How was your day?</li>
-                    <li class="bubble bubble-grey">Are you going to destroy humanity?</li>
-                    <li class="bubble bubble-blue">Pick a number between 1 & 10</li>
-                    <li class="bubble bubble-grey">😡</li>
-                    <li class="bubble bubble-blue">What's the meaning of life?</li>
-                    <li class="bubble bubble-grey">Flip a coin</li>
-                    <li class="bubble bubble-blue">How are you?</li>
-                    <li class="bubble bubble-grey">I'm happy!</li>
-                    <li class="bubble bubble-blue">Do you know Alexa?</li>
-                    <li class="bubble bubble-grey">Where are you?</li>
-                    <li class="bubble bubble-blue">❤</li>
-                    <li class="bubble bubble-grey">Are you spying on me?</li>
-                    <li class="bubble bubble-blue">Pleased to meet you!</li>
-                    <li class="bubble bubble-grey">Are you a robot?</li>
-                    <li class="bubble bubble-blue">Let's be friends</li>
+                    <li class="conversation-bubble bubble-blue">Hey Buddy!</li>
+                    <li class="conversation-bubble bubble-grey">What can do you?</li>
+                    <li class="conversation-bubble bubble-blue">Are you busy?</li>
+                    <li class="conversation-bubble bubble-grey">Who created you? </li>
+                    <li class="conversation-bubble bubble-blue">😂</li>
+                    <li class="conversation-bubble bubble-grey">Whats the weather doing?</li>
+                    <li class="conversation-bubble bubble-blue">Do you get hungry?</li>
+                    <li class="conversation-bubble bubble-grey">Are you real? </li>
+                    <li class="conversation-bubble bubble-blue">Tell me a joke</li>
+                    <li class="conversation-bubble bubble-blue">Hey Siri!</li>
+                    <li class="conversation-bubble bubble-grey">I love you!</li>
+                    <li class="conversation-bubble bubble-blue">How was your day?</li>
+                    <li class="conversation-bubble bubble-grey">Will you end humanity?</li>
+                    <li class="conversation-bubble bubble-grey">❤</li>
+                    <li class="conversation-bubble bubble-blue">Pick a number between 1 & 10</li>
+                    <li class="conversation-bubble bubble-grey">😡</li>
+                    <li class="conversation-bubble bubble-blue">What's the meaning of life?</li>
+                    <li class="conversation-bubble bubble-grey">Flip a coin</li>
+                    <li class="conversation-bubble bubble-blue">How are you?</li>
+                    <li class="conversation-bubble bubble-grey">I'm happy!</li>
+                    <li class="conversation-bubble bubble-blue">Do you know Alexa?</li>
+                    <li class="conversation-bubble bubble-grey">Do you have any family?</li>
+                    <li class="conversation-bubble bubble-blue">Are you spying on me?</li>
+                    <li class="conversation-bubble bubble-grey">Pleased to meet you!</li>
+                    <li class="conversation-bubble bubble-blue">Are you a robot?</li>
+                    <li class="conversation-bubble bubble-grey">Let's be friends</li>
                 </ul>
             </section>
             
@@ -79,7 +79,7 @@
 
                 //General
                 suggestedActionBackground: '#2E5EFF',
-                suggestedActionBorder: `none`,
+                suggestedActionBorder: 'none',
                 suggestedActionBorderRadius: 10,
                 suggestedActionTextColor: 'white',
 
@@ -88,10 +88,6 @@
                 bubbleTextColor: '#32353A',
                 bubbleBorderRadius: 10,
                 bubbleBorder: 'none',
-
-
-                avatarSize: 40,
-                botAvatarImage: 'https://buddybottablestorage.blob.core.windows.net/buddybotimages/avatars/BuddyBotFriendly.svg',
 
                 // User
                 bubbleFromUserBackground: '#2E5EFF',
