Add hover effects to conversation bubbles

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -30,32 +30,33 @@
                     Then take your pick on any of the following conversation starters.
                 </p>
                 <ul class="conversation-bubbles">
-                    <li class="conversation-bubble bubble-blue">Hey Buddy!</li>
-                    <li class="conversation-bubble bubble-grey">What can do you?</li>
-                    <li class="conversation-bubble bubble-blue">Are you busy?</li>
-                    <li class="conversation-bubble bubble-grey">Who created you? </li>
-                    <li class="conversation-bubble bubble-blue">😂</li>
-                    <li class="conversation-bubble bubble-grey">Whats the weather doing?</li>
-                    <li class="conversation-bubble bubble-blue">Do you get hungry?</li>
-                    <li class="conversation-bubble bubble-grey">Are you real? </li>
-                    <li class="conversation-bubble bubble-blue">Tell me a joke</li>
-                    <li class="conversation-bubble bubble-blue">Hey Siri!</li>
-                    <li class="conversation-bubble bubble-grey">I love you!</li>
-                    <li class="conversation-bubble bubble-blue">How was your day?</li>
-                    <li class="conversation-bubble bubble-grey">Will you destroy humanity?</li>
-                    <li class="conversation-bubble bubble-grey">❤</li>
-                    <li class="conversation-bubble bubble-blue">Pick a number between 1 & 10</li>
-                    <li class="conversation-bubble bubble-grey">😡</li>
-                    <li class="conversation-bubble bubble-blue">What's the meaning of life?</li>
-                    <li class="conversation-bubble bubble-grey">Flip a coin</li>
-                    <li class="conversation-bubble bubble-blue">How are you?</li>
-                    <li class="conversation-bubble bubble-grey">I'm happy!</li>
-                    <li class="conversation-bubble bubble-blue">Do you know Alexa?</li>
-                    <li class="conversation-bubble bubble-grey">Do you have any family?</li>
-                    <li class="conversation-bubble bubble-blue">Are you spying on me?</li>
-                    <li class="conversation-bubble bubble-grey">Pleased to meet you!</li>
-                    <li class="conversation-bubble bubble-blue">Are you a robot?</li>
-                    <li class="conversation-bubble bubble-grey">Let's be friends</li>
+                    <li class="conversation-bubble">Hey Buddy!</li>
+                    <li class="conversation-bubble">What can do you?</li>
+                    <li class="conversation-bubble">Are you busy?</li>
+                    <li class="conversation-bubble">Who created you? </li>
+                    <li class="conversation-bubble">😂</li>
+                    <li class="conversation-bubble">Whats the weather doing?</li>
+                    <li class="conversation-bubble">Do you get hungry?</li>
+                    <li class="conversation-bubble">Are you real? </li>
+                    <li class="conversation-bubble">Tell me a joke</li>
+                    <li class="conversation-bubble">Hey Siri!</li>
+                    <li class="conversation-bubble">I love you!</li>
+                    <li class="conversation-bubble">How was your day?</li>
+                    <li class="conversation-bubble">Will you destroy humanity?</li>
+                    <li class="conversation-bubble">❤</li>
+                    <li class="conversation-bubble">Pick a number between 1 & 10</li>
+                    <li class="conversation-bubble">😡</li>
+                    <li class="conversation-bubble">What's the meaning of life?</li>
+                    <li class="conversation-bubble">Flip a coin</li>
+                    <li class="conversation-bubble">How are you?</li>
+                    <li class="conversation-bubble">I'm happy!</li>
+                    <li class="conversation-bubble">Do you know Alexa?</li>
+                    <li class="conversation-bubble">😭</li>
+                    <li class="conversation-bubble">Do you have any family?</li>
+                    <li class="conversation-bubble">Are you spying on me?</li>
+                    <li class="conversation-bubble">Pleased to meet you!</li>
+                    <li class="conversation-bubble">Are you a robot?</li>
+                    <li class="conversation-bubble">Let's be friends</li>
                 </ul>
             </section>
 
@@ -76,17 +77,6 @@
 
         <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
         <script src="./src/js/webChat.js"></script>
-
-        <script>
-            //$(document).ready(function () {
-            //    $("button").click(function () {
-            //        $("input:text").val("Glenn Quagmire");
-            //    });
-            //});
-
-
-        </script>
-
     </div>
 </body>
 </html>
