Small styling tweaks

--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -27,7 +27,7 @@
                 <h2>Conversation Starters </h2>
                 <p class="article-text">
                     Unsure on where to start? Simply greet BuddyBot and he'll run you through a short setup,
-                    Then take your pick on any of the following conversation starters.
+                    then take your pick on any of the following conversation starters.
                 </p>
                 <ul class="conversation-bubbles">
                     <li class="conversation-bubble">Hey Buddy!</li>
@@ -59,7 +59,6 @@
                     <li class="conversation-bubble">Let's be friends</li>
                 </ul>
             </section>
-
             <footer>
                 <a class="github-link" href="https://github.com/KirbyMcKenzie/BuddyBot" target="_blank">
                     <img src="src/images/GitHubLogo.svg">
@@ -67,16 +66,15 @@
                 <p class="footer-tagline">Developed by <a class="footer-link" href="https://www.linkedin.com/in/kirbymckenzie/" target="_blank">Kirby McKenzie</a></p>
             </footer>
         </div>
-        <div class="webchat-container">
-            <div class="webchat-wrapper">
-                <div class="webchat-border">
-                    <div id="webchat"></div>
-                </div>
+    </div>
+    <div class="webchat-container">
+        <div class="webchat-wrapper">
+            <div class="webchat-border">
+                <div id="webchat"></div>
             </div>
         </div>
-
-        <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
-        <script src="./src/js/webChat.js"></script>
     </div>
+    <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
+    <script src="./src/js/webChat.js"></script>
 </body>
 </html>
