--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -13,6 +13,9 @@
             <section class="header-section">
                 <h1 class="main-title">BuddyBot</h1>
                 <p class="sub-title">An intelligent personal assistant bot to assist with your everyday needs</p>
+                <div class="info-well">
+                    <p class="info-text">BuddyBot is a work in progress. Please be patient and follow Buddy's prompts carefully. Thanks for your support! <p>
+                </div>
             </section>
             <section>
                 <h2>Meet Buddy</h2>
