--- a/BuddyBot/default.htm
+++ b/BuddyBot/default.htm
@@ -16,6 +16,7 @@
                 <div class="info-well">
                     <p class="info-text">BuddyBot is a work in progress. Please be patient and follow Buddy's prompts carefully. Thanks for your support! ✌🏼<p>
                 </div>
+                
             </section>
             <section>
                 <h2>Meet Buddy</h2>
@@ -67,6 +68,8 @@
                     <img src="src/images/GitHubLogo.svg">
                 </a>
                 <p class="footer-tagline">Developed by <a class="footer-link" href="https://www.linkedin.com/in/kirbymckenzie/" target="_blank">Kirby McKenzie</a></p>
+                <a class="footer-legal-link" href="./src/terms.html">Terms of Service</a>
+                <a class="footer-legal-link" href="./src/privacy.html">Privacy</a>
             </footer>
         </div>
     </div>
